# nnf-dm

./: .dockerignore  .gitignore  .gitmodules  CONTRIBUTING.md  Dockerfile  Dockerfile.rpmbuild  Jenkinsfile  Makefile  PROJECT  Readme.md  _aliases.sh  _create-dm.sh  _override-config.sh  _setup-cluster.sh  _setup-kind.sh  _setup-minikube.sh  _setup-sos-cluster.sh  _sh-node.sh  copy-offload.txt  crd-bumper.yaml  create-dms.sh  deploy.sh  go.mod  go.sum  initiateContainerTest.sh  kind-config.yaml  main.go  nnf-dm.spec  playground.sh  runContainerTest.sh  runUnitTest.sh  setDevVersion.sh  undeploy.sh  upgr-repo.sh  upgrade-gitops-maker.sh  upgrade-tester.sh
.github/workflows/: main.yml  nnf_dm_lib.yml  rpm_build.yml
api/: README.md
api/v1alpha1/: datamovement_types.go  datamovementmanager_types.go  rsyncnodedatamovement_types.go  rsynctemplate_types.go  zz_generated.deepcopy.go
cmd/: main.go
config/copy-offload/: copy_offload_role.yaml  copy_offload_role_binding.yaml  copy_offload_service_account.yaml  kustomization.yaml
config/crd/: kustomization.yaml
config/crd/bases/: dm.cray.hpe.com_datamovementmanagers.yaml  dm.cray.hpe.com_datamovements.yaml  dm.cray.hpe.com_rsyncdatamovements.yaml  dm.cray.hpe.com_rsyncnodedatamovements.yaml  dm.cray.hpe.com_rsynctemplates.yaml
config/crd/patches/: cainjection_in_datamovementmanagers.yaml  cainjection_in_datamovements.yaml  cainjection_in_rsyncdatamovements.yaml  cainjection_in_rsyncnodedatamovements.yaml  cainjection_in_rsynctemplates.yaml  webhook_in_datamovementmanagers.yaml  webhook_in_datamovements.yaml  webhook_in_rsyncdatamovements.yaml  webhook_in_rsyncnodedatamovements.yaml  webhook_in_rsynctemplates.yaml
config/default/: kustomization.yaml  manager_auth_proxy_patch.yaml  manager_config_patch.yaml
config/dm_config/: kustomization.yaml  nnf-dm-config.env  nnf-dm-config.yaml
config/dp0/: kustomization.yaml  manager_environment_deploy_patch.yaml
config/examples/: copy-offload-container-profiles.yaml  copy-offload-datamovement-profiles.yaml  copyoffload-containerprofile.yaml  copyoffload-datamovementprofile.yaml  kustomization.yaml
config/kind/: kustomization.yaml  manager_environment_deploy_patch.yaml
config/manager/: controller_manager_config.yaml  kustomization.yaml  manager.yaml  manager_imagepullsecret_patch.yaml  rsync_template_config.yaml  rsynctemplate.yaml  worker-sshd-config.yaml
config/manifests/: kustomization.yaml
config/mpi/: mpi-operator.yaml
config/prometheus/: kustomization.yaml
config/rbac/: daemon_role.yaml  daemon_role_binding.yaml  daemon_service_account.yaml  datamovement_editor_role.yaml  datamovement_viewer_role.yaml  datamovementmanager_editor_role.yaml  datamovementmanager_viewer_role.yaml  kustomization.yaml  role.yaml  role_binding.yaml  rsyncdatamovement_editor_role.yaml  rsyncdatamovement_viewer_role.yaml  rsyncnodedatamovement_editor_role.yaml  rsyncnodedatamovement_viewer_role.yaml  rsynctemplate_editor_role.yaml  rsynctemplate_viewer_role.yaml  service_account.yaml
config/samples/: dm_v1alpha1_datamovement.yaml  dm_v1alpha1_datamovementmanager.yaml  dm_v1alpha1_rsyncdatamovement.yaml  dm_v1alpha1_rsyncnodedatamovement.yaml  dm_v1alpha1_rsynctemplate.yaml  kustomization.yaml
config/samples/lustre/: dm_v1alpha1_datamovement.yaml  nnf_v1alpha1_storage.yaml
config/top/: kustomization.yaml
config/user-copy/: kustomization.yaml  user_copy_role.yaml  user_copy_role_binding.yaml  user_copy_service_account.yaml
controllers/: datamovement_controller.go  datamovement_controller_lustre.go  datamovement_controller_rsync.go  datamovement_controller_test.go  datamovementmanager_controller.go  datamovementmanager_controller_test.go  datamovementworkflow_controller.go  fakeProgressOutput.sh  rsyncdatamovement_controller.go  rsyncnodedatamovement_controller.go  rsyncnodedatamovement_controller_test.go  rsynctemplate_controller.go  rsynctemplate_controller_test.go  suite_test.go
controllers/metrics/: metrics.go
daemons/compute/: Readme.md  cert-load.sh  cert-test.sh  copy-offload-api.html  proto-gen.sh  rbac-show.sh
daemons/compute/_client-c/: Makefile  Readme.md  client.c  client.go  client.h  datamovement.pb-c.c  (+3 more)
daemons/compute/client-cpp/: CMakeLists.txt  Makefile  Readme.md  client.cc  datamovement.grpc.pb.cc  datamovement.grpc.pb.h  datamovement.pb.cc  datamovement.pb.h
daemons/compute/lib-cpp/: CMakeLists.txt  Makefile  Readme.md  client.cc  client.h  nnfdm-config.cmake.in
daemons/compute/lib-cpp/example/: CMakeLists.txt  Makefile  client-example.cc  client.cc
daemons/copy-offload-testing/: Makefile  e2e-mocked.sh  e2e.sh  gen_certs.sh  gen_certs2.sh
daemons/lib-copy-offload/: Makefile  Readme.md  copy-offload-status.c  copy-offload-status.h  copy-offload.c  copy-offload.h
demo/: allocation-computes-kind.yaml  allocation-computes.yaml  allocation-servers-kind.yaml  allocation-servers.yaml  demo-container-launcher-X.yaml  demo-container-worker-0.yaml  demo-datamovementprofile.yaml  demo-mpi-container-example.yaml  demo-nonmpi-container-kind.yaml  demo-nonmpi-container.yaml  demo-run.sh  demo-tester.sh  elcap-computes-san.conf  elcap-computes.txt  elcap-rabbits-san.conf  elcap-rabbits.txt  gen_certs.sh  jwt-play.go  kind-computes.txt  local-dm-prof.yaml  mk-copy-offload-secrets.sh  mk-secret.sh  offload-req-kind.yaml  offload-req.yaml  req-client.conf  req-srvr.conf  req.conf  san-cert-hdr.conf  trim-storedversions.sh  z2-dws-wf.yaml  z3-computes.yaml  z4-servers.yaml
demo/jwt-play1/: jwt-play.go
demo/jwt-play2/: jwt-play2.go
hack/: make-kustomization2.sh
internal/controller/: datamovement_controller.go  datamovement_controller_test.go  datamovementmanager_controller.go  datamovementmanager_controller_test.go  suite_test.go
man/man3/: copy_offload_cancel.3  copy_offload_cleanup.3  copy_offload_configure.3  copy_offload_copy.3  copy_offload_init.3  copy_offload_list.3  copy_offload_shutdown.3  copy_offload_status.3  libcopyoffload.3
tools/: check-man-examples.sh  gen_certs.sh  mk-copy-offload-secrets.sh  mk-rabbit-san.sh  mk-usercontainer-secrets.sh
(+61 files in other folders)
